--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version : "3.3"
 services :
   web :
-     image: ahmadhassan749/my-note-app:latest
+     image: ahmad762249//my-notes-app
      ports :
          - "8000:8000"
