--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,7 @@
-version: '3'
+version: "3"
 services:
   backend:
     image: choudhryshoaib/notes-app:latest
     ports:
       - "8000:8000"
-    environment:
-      - DB_HOST=your-db-host
-      - DB_PORT=3306
-      - DB_NAME=your-db-name
-      - DB_USER=your-db-user
-      - DB_PASSWORD=your-db-password
+
